# AI-humanoid-book

./: .gitignore  404.html  blog.html  index.html  markdown-page.html  package-lock.json  sitemap.xml
.gemini/commands/: sp.adr.toml  sp.analyze.toml  sp.checklist.toml  sp.clarify.toml  sp.constitution.toml  sp.git.commit_pr.toml  sp.implement.toml  sp.phr.toml  sp.plan.toml  sp.specify.toml  sp.tasks.toml
.specify/memory/: chatbot-constitution.md  constitution.md
.specify/templates/: plan-template.md
assets/css/: styles.01b3ccd5.css
assets/js/: 060cac35.84486870.js  08e369ea.053581b3.js  0d2bea60.4be92204.js  10308c88.918ae68b.js  154b2291.0b8fe1f1.js  17896441.fcc9d5a8.js  190c7f97.c6608ccf.js  1df93b7f.279715b8.js  2435f528.8aaa3296.js  2a5a65cb.b86cf7f6.js  2a657b3d.a8d66d85.js  33fc5bb8.fa36cea0.js  363eab3b.536400c9.js  38836855.cece8e96.js  (+33 more)
backend/: README.md  pyproject.toml
backend/scripts/: ingest.py
backend/src/: main.py
backend/src/api/: chat.py
backend/src/models/: chat.py
backend/src/services/: qdrant_client.py  rag_service.py
backend/tests/: test_main.py
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
book/: chapter1.html  chapter10.html  chapter11.html  chapter12.html  chapter13.html  chapter14.html  chapter15.html  chapter2.html  chapter3.html  chapter4.html  chapter5.html  chapter6.html  chapter7.html  chapter8.html  chapter9.html
frontend/: README.md
humanoid-book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+85 files in other folders)
