[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
qdrant-client = "^1.7.0"
openai = "^1.6.1"
langchain = "^0.1.0"
pydantic = "^2.5.3"

[tool.poetry.dev-dependencies]
black = "^23.12.0"
ruff = "^0.1.9"
pytest = "^7.4.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
